--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "lodash": "^4.17.11",
     "node-uuid": "^1.4.8",
+    "proptypes": "^1.1.0",
     "radium": "^0.25.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
