--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.9.1",
     "lodash": "^4.17.11",
     "node-uuid": "^1.4.8",
     "proptypes": "^1.1.0",
@@ -12,6 +14,7 @@
     "react-dom": "^16.8.1",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
+    "react-test-renderer": "^16.8.1",
     "redux": "^4.0.1",
     "webfontloader": "^1.6.28"
   },
