--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "artist-almanac",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://alexBCN84.github.io/artist-almanac/",
   "dependencies": {
     "axios": "^0.18.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.9.1",
+    "gh-pages": "^2.0.1",
     "lodash": "^4.17.11",
     "node-uuid": "^1.4.8",
     "proptypes": "^1.1.0",
@@ -22,6 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
